book/tests/snapshots/snapshot__run_reference_prql@transforms__aggregate-0.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/transforms/aggregate-0.prql
---
SELECT
  AVG(salary),
  COUNT(*) AS ct
FROM
  employees
