book/tests/snapshots/snapshot__run_reference_prql@transforms__concat-and-union-0.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/transforms/concat-and-union-0.prql
---
(
  SELECT
    *
  FROM
    employees_1
)
UNION
ALL
SELECT
  *
FROM
  employees_2
