book/tests/snapshots/snapshot__run_reference_prql@transforms__filter-1.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/transforms/filter-1.prql
---
SELECT
  *
FROM
  employees
WHERE
  age BETWEEN 25
  AND 40
