book/tests/snapshots/snapshot__run_reference_prql@transforms__join-1.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/transforms/join-1.prql
---
SELECT
  employees.*,
  p.*
FROM
  employees
  LEFT JOIN positions AS p ON id = employee_id
