book/tests/snapshots/snapshot__run_reference_prql@transforms__select-3.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/transforms/select-3.prql
---
SELECT
  first_name,
  last_name
FROM
  employees AS e
