book/tests/snapshots/snapshot__run_reference_prql@transforms__sort-1.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/transforms/sort-1.prql
---
SELECT
  *
FROM
  employees
ORDER BY
  age DESC
