book/tests/snapshots/snapshot__run_reference_prql@transforms__sort-4.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/transforms/sort-4.prql
---
SELECT
  *,
  CONCAT(first_name, ' ', last_name) AS name
FROM
  employees
ORDER BY
  tenure
